--- a/src/theroast_backend/index/templates/base.html
+++ b/src/theroast_backend/index/templates/base.html
@@ -66,13 +66,13 @@
           </div>
       </div>
       <hr />
-      <div class="row" style="margin-top: 12px;">
-        <div class="col bg-dark">
+      <div class="row" style="margin-top: 12px; height: 300px;">
+        <div class="col">
         </div>
         <div class="col-8">
         <a href="https://twitter.com/intent/tweet?button_hashtag=theroast&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #theroast</a>
         </div>
-        <div class="col bg-dark">
+        <div class="col">
         </div>
       </div>
   </div>
