--- a/src/theroast_backend/index/templates/base.html
+++ b/src/theroast_backend/index/templates/base.html
@@ -45,8 +45,17 @@
           </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+                <div class="dropdown-menu">
+                </div>
+              </div>
+              <input type="text" class="form-control" aria-label="Text input with dropdown button">
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">Search</button>
+              </div>
+            </div>
           </form>
       </div>
   </nav>
@@ -66,7 +75,7 @@
           </div>
       </div>
       <hr />
-      <div class="row" style="margin-top: 12px; height: 300px;">
+      <div class="row" style="margin-top: 12px;">
         <div class="col">
         </div>
         <div class="col-8">
