--- a/src/theroast_backend/index/templates/base.html
+++ b/src/theroast_backend/index/templates/base.html
@@ -108,6 +108,7 @@
   </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 {% block post_body_static %}
 {% endblock %}
 <script src="{% static 'base/base.js' %}"></script>
