Add production ready docker file, and development docker-compose

--- a/src/theroast_backend/index/templates/home.html
+++ b/src/theroast_backend/index/templates/home.html
@@ -9,7 +9,9 @@
         <div class="form-group">
             <label>Name:</label>
             <input name="name" class="form-control" placeholder="Mighty Titan..">
-            <color-range name="color"></color-range>
+            <label>Description:</label>
+            <input name="description" class="form-control" placeholder="This powerful blend contains..">
+            <color-range></color-range>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
