--- a/src/theroast_backend/roast/templates/roast_page.html
+++ b/src/theroast_backend/roast/templates/roast_page.html
@@ -36,7 +36,7 @@ Vue.component('roast_page', {
                 </div>
             </div>
             <color-range
-                v-bind:colors="[{ color: '#FFD659'}]"
+                v-bind:colors="[{ color: }]"
             />
         </div>
         <hr />
