--- a/src/theroast_backend/index/templates/base.html
+++ b/src/theroast_backend/index/templates/base.html
@@ -28,36 +28,28 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
           <a class="navbar-brand" href="/">The Roast</a>
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <div style="padding-right: 12px;">
-              <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                <div class="btn-group mr-2" role="group" aria-label="First group">
-                  {% if user.is_authenticated %}
-                    <a href="{% url 'index:home' %}"><button type="button" class="btn btn-primary">Home</button></a>
-                    <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
-                  {% else %}
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
-                    <button type="button" class="btn btn-primary">Signup</button>
-                  {% endif %}
+            <li class="nav-item active">
+              <div style="padding-right: 12px;">
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                  <div class="btn-group mr-2" role="group" aria-label="First group">
+                    {% if user.is_authenticated %}
+                      <a href="{% url 'index:home' %}"><button type="button" class="btn btn-primary">Home</button></a>
+                      <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
+                    {% else %}
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
+                      <button type="button" class="btn btn-primary">Signup</button>
+                    {% endif %}
+                  </div>
                 </div>
               </div>
-            </div>
-          </li>
+            </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <div class="input-group">
-              <div class="input-group-prepend">
-                <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
-                <div class="dropdown-menu">
-                </div>
-              </div>
-              <input type="text" class="form-control" aria-label="Text input with dropdown button">
-              <div class="input-group-append">
-                <button class="btn btn-outline-secondary" type="button">Search</button>
-              </div>
-            </div>
-          </form>
+          <roast-search
+            v-bind:options="{name: 'Search', url: '/'}"
+          >
+          </roast-search>
       </div>
+    </div>
   </nav>
   <div style="margin: 0px; width: 100%; height: 100%;">
       <div class="row" style="width:100%; margin: 0px;">
@@ -105,9 +97,10 @@
     </div>
   </div>
   {% endif %}
-  </div>
+</div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.0.0-rc.15/dist/bootstrap-vue.common.min.js"></script> {% endcomment %}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 {% block post_body_static %}
 {% endblock %}
