Work more on upload styling

--- a/src/theroast_backend/index/templates/home.html
+++ b/src/theroast_backend/index/templates/home.html
@@ -9,8 +9,8 @@
         {% csrf_token %}
         <div class="form-group row">
             <div class="col">
-                <text-input title="Name:" placeholder="Mighty Titan">
-                </text-input>
+                <roast-input title="Name:" placeholder="Mighty Titan">
+                </roast-input>
                 <label>Description:</label>
                 <textarea rows="10" name="description" class="form-control" placeholder="This powerful blend contains.."></textarea>
             </div>
