--- a/src/theroast_backend/index/templates/base.html
+++ b/src/theroast_backend/index/templates/base.html
@@ -4,6 +4,7 @@
 <html lang="en" style="width: 100%; height: 100%; margin: 0; padding: 0">
 <head>
   <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2&appId=387893331992450&autoLogAppEvents=1"></script>
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
