--- a/src/theroast_backend/static/base/base.css
+++ b/src/theroast_backend/static/base/base.css
@@ -1,3 +1,20 @@
+h1,
+h2,
+label,
+strong,
+input {
+    font-family: 'Inconsolata', monospace;
+}
+
+h3,
+h4,
+p,
+span,
+div {
+    font-family: 'Merriweather', serif;
+}
+
 input:focus {
     outline: none;
 }
+
