--- a/src/theroast_backend/static/base/base.css
+++ b/src/theroast_backend/static/base/base.css
@@ -18,3 +18,11 @@ input:focus {
     outline: none;
 }
 
+.fade-enter-active, .fade-leave-active {
+  transition: opacity 0.25s ease-out;
+}
+
+.fade-enter, .fade-leave-to {
+  opacity: 0;
+}
+
