Begin work on multiline input

--- a/src/index/templates/home.html
+++ b/src/index/templates/home.html
@@ -11,8 +11,8 @@
             <div class="col">
                 <roast-input title="Name:" placeholder="Mighty Titan" textarea="false">
                 </roast-input>
-                <label>Description:</label>
-                <textarea rows="10" name="description" class="form-control" placeholder="This powerful blend contains.."></textarea>
+                <roast-input title="Description:" placeholder="A powerful blend containing.." textarea="true">
+                </roast-input>
             </div>
             <div class="col">
                 <roast-image-upload
