--- a/src/index/templates/base.html
+++ b/src/index/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body style="width: 100%; height: 100%; margin: 0; padding: 0">
 <div id="app">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button class="navbar-toggler" 
         type="button" 
         data-toggle="collapse" 
@@ -26,35 +26,35 @@
         >
           <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="/">The Roast</a>
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <div style="padding-right: 12px;">
-                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-                  <div class="btn-group mr-2" role="group" aria-label="First group">
-                    {% if user.is_authenticated %}
-                      <a href="{% url 'index:home' %}"><button type="button" class="btn btn-primary">Home</button></a>
-                      <a href="{% url 'logout' %}"><button type="button" class="btn btn-primary">Logout</button></a>
-                    {% else %}
-                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">Login</button>
-                      <button type="button" class="btn btn-primary">Signup</button>
-                    {% endif %}
-                  </div>
+      <h1><a class="navbar-brand" href="/">The Roast</a></h1>
+      <div class="collapse navbar-collapse">
+        <div class="mr-auto">
+        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <div style="padding-right: 12px;">
+              <div class="btn-toolbar" role="toolbar">
+                <div class="btn-group" role="group">
+                  {% if user.is_authenticated %}
+                    <a href="{% url 'index:home' %}"><button style="margin-right: 6px" type="button" class="btn btn-outline-primary">Home</button></a>
+                    <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-primary">Logout</button></a>
+                  {% else %}
+                    <button type="button" class="btn btn-lg btn-outline-light" data-toggle="modal" data-target="#loginModal">Login</button>
+                    <button type="button" class="btn btn-lg btn-outline-light" data-toggle="modal" data-target="#loginModal">Signup</button>
+                  {% endif %}
                 </div>
               </div>
-            </li>
-          </ul>
-          <roast-search
-            v-bind:options="{name: 'Search', url: '/'}"
-          >
-          </roast-search>
+            </div>
+          </li>
+        </ul>
+        <roast-search v-bind:options="{url: '/'}">
+        </roast-search>
       </div>
     </div>
   </nav>
   <div style="margin: 0px; width: 100%; height: 100%;">
       <div class="row" style="width:100%; margin: 0px;">
-          <div class="col bg-dark">
+          <div class="col">
           {% block leftcol %}
           {% endblock %}
           </div>
@@ -62,7 +62,7 @@
           {% block content %}
           {% endblock %}
           </div>
-          <div class="col bg-dark">
+          <div class="col">
           {% block rightcol %}
           {% endblock %}
           </div>
@@ -101,7 +101,6 @@
 </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-{% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap-vue@2.0.0-rc.15/dist/bootstrap-vue.common.min.js"></script> {% endcomment %}
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="{% static 'base/base.js' %}"></script>
 {% block post_body_static %}
