--- a/src/index/templates/base.html
+++ b/src/index/templates/base.html
@@ -53,7 +53,7 @@
     </div>
   </nav>
   <div style="margin: 0px; width: 100%; height: 100%;">
-      <div class="row" style="width:100%; margin: 0px;">
+      <div class="row" style="height: 95%; width:100%; margin: 0px;">
           <div class="col">
           {% block leftcol %}
           {% endblock %}
@@ -67,15 +67,14 @@
           {% endblock %}
           </div>
       </div>
-      <hr />
-      <div class="row" style="margin-top: 12px;">
-        <div class="col">
+      <div class="row bg-dark" style="height: 5%; width: 100%;">
+        {% comment %} <div class="col">
         </div>
         <div class="col-8">
         <a href="https://twitter.com/intent/tweet?button_hashtag=theroast&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">Tweet #theroast</a>
         </div>
         <div class="col">
-        </div>
+        </div> {% endcomment %}
       </div>
   </div>
 
