Begin work on image uploads

--- a/src/index/templates/home.html
+++ b/src/index/templates/home.html
@@ -5,17 +5,17 @@
 <div id="home-app" style="margin-top: 12px">
     <h2 style="text-align: center; background-color: white;" id="roast-title"> ☕ Upload a new roast ☕ </h2>
     <hr style="margin-top: 24px"/>
-    <form method="POST" action="{% url 'roast:create' %}">
+    <form method="POST" action="{% url 'roast:roasts' %}">
         {% csrf_token %}
         <div class="form-group row">
             <div class="col">
                 <form-label>Name:</form-label>
                 <roast-input-line title="Name:" placeholder="Mighty Titan" name="name" style="margin-bottom: 6px;"></roast-input-line>
                 <form-label>Short Description:</form-label>
-                <roast-input-line title="Short Description:" placeholder="A powerful blend containing.." name="description" style="margin-bottom: 6px;"></roast-input-line>
+                <roast-input-line title="Short Description:" placeholder="A powerful blend containing.." name="short_description" style="margin-bottom: 6px;"></roast-input-line>
                 <form-label>Long Description:</form-label>
-                <roast-input-line title="Long Description:" placeholder="A powerful blend containing.." name="description" style="margin-bottom: 6px;"></roast-input-line>
-                <roast-image-upload title="Upload Images:"></roast-image-upload>
+                <roast-input-line title="Long Description:" placeholder="A powerful blend containing.." name="long_description" style="margin-bottom: 6px;"></roast-input-line>
+                <roast-image-upload title="Upload Images:" name="images"></roast-image-upload>
             </div>
         </div>
         <button type="submit" class="btn btn-dark btn-block shadow-lg mb-5 pill">Submit</button>
