--- a/src/index/templates/base.html
+++ b/src/index/templates/base.html
@@ -102,6 +102,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="{% static 'base/base.js' %}"></script>
+<script src="{% static 'components/components.js' %}"></script>
 {% block post_body_static %}
 {% endblock %}
 </html>
