--- a/src/index/templates/home.html
+++ b/src/index/templates/home.html
@@ -1,39 +1,53 @@
-{% extends "base.html" %}
-{% load static %}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div id="home-app" style="margin-top: 12px">
-    <h2 style="text-align: center; background-color: white;" id="roast-title"> ☕ Upload a new roast ☕ </h2>
-    <hr style="margin-top: 24px"/>
-    <roast-form method="POST" action="{% url 'roast:api-root' %}">
-        {% csrf_token %}
-        <div class="form-group row">
-            <div class="col">
-                <form-label>Name:</form-label>
-                <roast-input-line title="Name:" placeholder="Mighty Titan" name="name" style="margin-bottom: 6px;"></roast-input-line>
-                <form-label>Short Description:</form-label>
-                <roast-input-line title="Short Description:" placeholder="A powerful blend containing.." name="short_description" style="margin-bottom: 6px;"></roast-input-line>
-                <form-label>Long Description:</form-label>
-                <roast-input-line title="Long Description:" placeholder="A powerful blend containing.." name="long_description" style="margin-bottom: 6px;"></roast-input-line>
-                <roast-image-upload title="Upload Images:" name="images"></roast-image-upload>
-            </div>
-        </div>
-        <button type="submit" class="btn btn-dark btn-block shadow-lg mb-5 pill">Submit</button>
-    </roast-form>
+  <h2 style="text-align: center; background-color: white;" id="roast-title">
+    ☕ Upload a new roast ☕
+  </h2>
+  <hr style="margin-top: 24px" />
+  <roast-form method="POST" action="{% url 'roast:api-root' %}">
+    {% csrf_token %}
+    <div class="form-group row">
+      <div class="col">
+        <form-label>Name:</form-label>
+        <roast-input-line
+          title="Name:"
+          placeholder="Mighty Titan"
+          name="name"
+          style="margin-bottom: 6px;"
+        ></roast-input-line>
+        <form-label>Short Description:</form-label>
+        <roast-input-line
+          title="Short Description:"
+          placeholder="A powerful blend containing.."
+          name="short_description"
+          style="margin-bottom: 6px;"
+        ></roast-input-line>
+        <form-label>Long Description:</form-label>
+        <roast-input-line
+          title="Long Description:"
+          placeholder="A powerful blend containing.."
+          name="long_description"
+          style="margin-bottom: 6px;"
+        ></roast-input-line>
+        <roast-image-upload
+          title="Upload Images:"
+          name="images"
+        ></roast-image-upload>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-dark btn-block shadow-lg mb-5 pill">
+      Submit
+    </button>
+  </roast-form>
 </div>
-{% endblock %}
-
-{% block rightcol %}
-{% endblock %}
-
-{% block post_body_static %}
+{% endblock %} {% block rightcol %} {% endblock %} {% block post_body_static %}
 <script src="{% static 'home/home.js' %}"></script>
 <style>
-label {
+  label {
     margin-top: 12px;
-}
+  }
 
-#roast-title {
+  #roast-title {
     margin: 12px;
 
     /* #1 */
@@ -46,10 +60,8 @@ label {
     outline: 5px solid hsl(0, 0%, 60%);
 
     /* #4 AND INFINITY!!! (CSS3 only) */
-    box-shadow:
-        0 0 0 10px hsl(0, 0%, 80%),
-        0 0 0 15px hsl(0, 0%, 90%),
-        0 0 0 20px hsl(0, 0%, 95%);
-}
+    box-shadow: 0 0 0 10px hsl(0, 0%, 80%), 0 0 0 15px hsl(0, 0%, 90%),
+      0 0 0 20px hsl(0, 0%, 95%);
+  }
 </style>
 {% endblock %}
