--- a/src/index/templates/roast.html
+++ b/src/index/templates/roast.html
@@ -25,15 +25,16 @@ Vue.component('roast-page', {
     `
 })
 
-var KEY = "{{unique_id}}"
 var app = new Vue({
     el: "#roast-app",
     data: {
-        roast: {}
+        roast: {},
+        key: "{{unique_id}}"
     },
     mounted() { 
+        var url = `localhost:8000/roast/${this.key}/`
         axios.get({
-            url: `/roast/${this.key}`
+            url: url
         })
             .then((response) => {
                 console.log(response)
