--- a/src/index/templates/roast.html
+++ b/src/index/templates/roast.html
@@ -32,10 +32,8 @@ var app = new Vue({
         key: "{{unique_id}}"
     },
     mounted() { 
-        var url = `localhost:8000/roast/${this.key}/`
-        axios.get({
-            url: url
-        })
+        var url = `/roast/${this.key}/`
+        axios.get(url)
             .then((response) => {
                 console.log(response)
         })
