--- a/src/index/templates/roast.html
+++ b/src/index/templates/roast.html
@@ -27,17 +27,7 @@ Vue.component('roast-page', {
         axios.get(url)
             .then(response => {
                 this.roast = response.data;
-                var images = this.roast.images;
-                images.forEach(image => {
-                    var imageUrl = "/roast/images/" + image.unique_id + "/"
-                    axios.get(imageUrl)
-                        .then(response => {
-                            console.log(response)
-                    })
-                        .catch(response => {
-
-                    })
-                })
+                console.log(this.roast)
         })
             .catch(err => {
                 console.log(err)
@@ -52,7 +42,9 @@ Vue.component('roast-page', {
         <hr />
         <roast-image 
             v-for="image in roast.images"
-            src="image"
+            v-bind:image-src="'/roast/images/' + image.unique_id + '/'"
+            height="100"
+            width="100"
         >
         </roast-image>
     </div>
